# skyline

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  Shaders.cmake  test.txt
cmake/: AddSubmodule.cmake
project/: project.ini
shaders/: TestCompute.comp.glsl
src/engine/: CMakeLists.txt  EgMain.cpp  EgMain.h  EgPch.h
src/engine/renderer/: EgDeletionQueue.h  EgDescriptor.cpp  EgDescriptor.h  EgPipeline.cpp  EgPipeline.h  EgQueue.h  EgRenderer.cpp  EgRenderer.h  EgShader.cpp  EgShader.h
src/game/: CMakeLists.txt  GcMain.cpp  GcMain.h  GcPch.h
src/game/application/: GcApplication.cpp  GcApplication.h
src/game/frontend/: GcFrontendManager.h
src/toolkit/: CMakeLists.txt  TkPch.h
src/toolkit/console/: TkConManager.cpp  TkConManager.h  TkConObject.h  TkConVar.cpp  TkConVar.h
src/toolkit/containers/: TkUnorderedMap.h  TkVector.h
src/toolkit/core/: TkAssert.cpp  TkAssert.h  TkCore.h  TkHandle.h  TkHandleTraits.h  TkID.h  TkIDMap.h  TkMacros.h  TkSTD.h  TkSingleton.h  TkString.h  TkTraits.h  TkTypes.h
src/toolkit/core/containers/: TkUnorderedMap.h  TkVector.h
src/toolkit/core/string/: TkBasicString.h  TkString.h
src/toolkit/engine/: TkEngineSettings.h
src/toolkit/graphics/api/: TkGraphicsAPI.cpp
src/toolkit/graphics/vulkan/: TkVulkan.cpp  TkVulkan.h  vk_mem_alloc.h
src/toolkit/graphics/vulkan/constructors/: TkVkConstructorIncludes.inl  TkVmaStructures.h  TkVulkanCommandStructures.h  TkVulkanConstructors.h  TkVulkanImageStructures.h  TkVulkanPipelineStructures.h  TkVulkanRenderPassStructures.h  TkVulkanSyncStructures.h
src/toolkit/maths/hash/: TkHash.h
src/toolkit/maths/numeric/: TkIntrinsics.h  TkVector3.h
src/toolkit/memory/: TkAlignedMemory.h
src/toolkit/scripts/squirrel/: TkSquirrelVM.h
src/toolkit/system/: TkSystem.cpp  TkSystem.h
src/toolkit/system/filesystem/: TkFile.cpp  TkFile.h  TkFileHandle.cpp  TkFileHandle.h  TkFileHandleMap.cpp  TkFileHandleMap.h  TkFilesystem.cpp  TkFilesystem.h  TkVPAK.h
src/toolkit/system/timer/: TkClock.cpp  TkClock.h
